<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_castName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Nama cast" />

</LinearLayout>